   all functions that stop sounds can fade out instead
 - Parser: Character input support
 - Parser: Commands triggered while a turn is running are put into a queue
   and ran when the prompt is ready
 - Parser: Meta and dialog commands that have no output will not pop up
   a notification/dialog
 - Parser: Support for nested HTML tags


Releases
--------

 - The library is now packaged to three complete minified library files that
   includes everything needed by the system, one for each engine and one
   "vanilla" with no engine
 - Using a single library file also fixes the problem where jQuery was not
   loaded correctly in the Inform 7 interpreter template when there was no 
   Internet connection
 - Added a configurable loader message for Parchment
 - Fixed a rejected command's CSS rule so that it's styled correctly
 - Revised the build script
 - I7 now supports adding custom JavaScript and CSS files, so automatically
   loaded "vorple.custom.js" and "vorple.custom.css" files are now removed 
 


Release 2.4 (2012-09-29)
========================

Support for Parchment (Z-machine) and Inform 7.

Modules
-------

 - Cookie: Added vorple.cookie.list()
 - Core: changed the initialization event from "vorpleInit" to "init.vorple",
   in preparation of namespaced parser events
 - Core: Made vorple.core.engine() return the engine that's used to initialize
   Vorple, not the engine that is otherwise available
 - Core: Removed the clickLink() method, replaced by vorple.undum.doClick() 
   and vorple.undum.doLink()
 - Html: Fixed a bug where vorple.html.url() would not return correct values
   when no filename was given
 - Media: Changed the default YouTube video width from 640 pixels to 600 pixels
   so that the videos fit in the new Parchment version layout
 - Parser: Added the module and Parchment/Inform 7 support
 - Undum: Added doClick() and doLink() that expose undum.doClick()
   and undum.doLink()


Libraries
---------

 - Updated the Noty library
    
   
Tests