@@ -1,56 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Vorple examples</title>
-  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no">
-  <link rel="stylesheet" href="../../../src/inform7/templates/Vorple/vorple.css">
+    <title>Vorple examples</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel="stylesheet" href="../../../src/inform7/templates/Vorple/vorple.css">
 
+    <script type="text/javascript" src="../../../lib/3rdparty-bundle.min.js"></script>
+    <script type="text/javascript" src="../../../vendor/parchment.min.js"></script>
+    <script type="text/javascript" src="../../../src/vorple.core.js"></script>
+    <script type="text/javascript" src="../../../src/vorple.cookie.js"></script>
+    <script type="text/javascript" src="../../../src/vorple.html.js"></script>
+    <script type="text/javascript" src="../../../src/vorple.media.js"></script>
+    <script type="text/javascript" src="../../../src/vorple.notify.js"></script>
+    <script type="text/javascript" src="../../../src/vorple.parser.js"></script>
+    <script type="text/javascript" src="../../../src/vorple.tooltip.js"></script>
+    <script type="text/javascript" src="vorple.custom.js"></script>
+    <script type="text/javascript">
+    $( function() {
+        $( '#vorpleLoader' ).text( 'Loading...' );
+    });
+    </script>
 
-<script type="text/javascript" src="../../../lib/jquery-1.8.3.min.js"></script>
-<script type="text/javascript" src="../../../lib/parchment.min.js"></script>
-<script type="text/javascript" src="../../../lib/jquery.noty.js"></script>
-<script type="text/javascript" src="../../../lib/noty/default.js"></script>
-<script type="text/javascript" src="../../../lib/noty/layouts.js"></script>
-<script type="text/javascript" src="../../../lib/jquery.qtip.min.js"></script>
-<script type="text/javascript" src="../../../lib/soundmanager2.min.js"></script>
-<script type="text/javascript" src="../../../src/vorple.core.js"></script>
-<script type="text/javascript" src="../../../src/vorple.cookie.js"></script>
-<script type="text/javascript" src="../../../src/vorple.html.js"></script>
-<script type="text/javascript" src="../../../src/vorple.media.js"></script>
-<script type="text/javascript" src="../../../src/vorple.notify.js"></script>
-<script type="text/javascript" src="../../../src/vorple.parser.js"></script>
-<script type="text/javascript" src="../../../src/vorple.tooltip.js"></script>
-<script type="text/javascript" src="vorple.custom.js"></script>
-<script type="text/javascript">
-$( function() {
-	$( '#vorpleLoader' ).text( 'Loading...' );
-});
-</script>
+    <link rel="stylesheet" href="../../../vendor/parchment/parchment.min.css">
+    <link rel="stylesheet" href="../../../vendor/qtip/jquery.qtip.min.css">
+    <link rel="stylesheet" href="../../../src/inform7/templates/Vorple/vorple.css">
+    <link rel="stylesheet" href="vorple.custom.css">
 
-<link rel="stylesheet" href="../../../lib/parchment/parchment.min.css">
-<link rel="stylesheet" href="../../../lib/qtip/jquery.qtip.min.css">
-<link rel="stylesheet" href="../../../src/inform7/templates/Vorple/vorple.css">
-<link rel="stylesheet" href="vorple.custom.css">
+    <link href='http://fonts.googleapis.com/css?family=Orbitron:700' rel='stylesheet' type='text/css'>
 
-<link href='http://fonts.googleapis.com/css?family=Orbitron:700' rel='stylesheet' type='text/css'>
-
-<script type="text/javascript">
-parchment.options.lib_path = '../../../lib/parchment/';
-parchment.options.lock_story = 0;
-
-// if a story is loaded
-if( window.location.search.indexOf( '?story=' ) === 0 ) {
-	vorple.media.defaults.swfPath = '../../../lib/soundmanager';
-	vorple.core.init( parchment );
-	parchment.init();
-	$( function() {
-		$( '#exampleLinks' ).hide();
-	});
-}
-</script>
-  
+    <script type="text/javascript">
+        parchment.options.lib_path = '../../../vendor/parchment/';
+        parchment.options.lock_story = 0;
+        vorple.media.defaults.swfPath = '../../../vendor/soundmanager';
+        vorple.core.init( parchment );
+        parchment.init();
+    </script>
 </head>
+
 <body class="play">
 <div id="vorpleContainer">
 <div id="vorple"><div id="vorpleLoader"></div></div>
